--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,88 +1,148 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Меню шкільної їдальні</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    /* Загальні стилі */
+    /* Загальні стилі для тіла */
     body {
       font-family: "Orbitron", sans-serif;
+      background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
+      color: white;
       margin: 0;
       padding: 0;
-      background: linear-gradient(120deg, #ff9a9e 0%, #66a6ff 100%);
-      color: white;
       display: flex;
-      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
       min-height: 100vh;
+      text-align: center;
+      flex-direction: column;
     }
 
+    /* Стиль для хедера (навігація) */
     header {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      background-color: rgba(0, 31, 63, 0.9);
+      padding: 10px 0;
+      width: 100%;
+      text-align: center;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
     }
 
-    header nav ul {
-      display: flex;
-      justify-content: center;
+    /* Стилі для навігації */
+    nav ul {
       list-style: none;
       padding: 0;
       margin: 0;
+      display: flex;
+      justify-content: space-between; /* Зміст на всю ширину */
+      width: 100%; /* Ширина 100% */
+      text-align: center;
     }
 
-    header nav ul li {
-      margin: 0 20px;
+    nav ul li {
+      margin: 0 15px;
     }
 
-    header nav ul li a {
-      text-decoration: none;
+    nav ul li a {
       color: white;
+      text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
       font-size: 18px;
-      padding: 10px 20px;
-      border-radius: 5px;
-      transition: color 0.3s ease, transform 0.3s ease;
     }
 
-    header nav ul li a:hover {
+    nav ul li a:hover {
       color: #ff9a9e;
       transform: scale(1.1);
       text-shadow: 0 0 8px #ff9a9e;
     }
 
-    .main-content {
-      padding: 20px;
-      text-align: center;
+    /* Стилі для контейнера контенту */
+    .content-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      flex-grow: 1;
+      margin-top: 10px;
     }
 
-    footer {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+    .content-container h2 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      color: #fff;
+    }
+
+    /* Стилі для кнопок категорій */
+    .category-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
 
     .category-button {
-      background-color: #ff9a9e;
-      padding: 15px;
-      font-size: 20px;
-      border-radius: 10px;
+      background: linear-gradient(135deg, #f1c40f, #e67e22);
+      color: black;
+      padding: 15px 30px;
+      font-size: 1.2rem;
       text-decoration: none;
-      color: white;
-      display: inline-block;
-      margin: 20px;
-      transition: background-color 0.3s ease;
+      border-radius: 5px;
+      transition: background 0.3s ease, transform 0.3s ease;
+      cursor: pointer;
     }
 
     .category-button:hover {
-      background-color: #ff6a6a;
+      background: linear-gradient(135deg, #e67e22, #f1c40f);
+      transform: scale(1.1);
+    }
+
+    /* Футер */
+    .footer {
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      padding: 15px;
+      width: 100%;
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
+      font-size: 0.9rem;
+      z-index: 10;
+    }
+
+    /* Адаптивність для мобільних пристроїв */
+    @media (max-width: 768px) {
+      .content-container h2 {
+        font-size: 2rem;
+      }
+
+      .category-button {
+        font-size: 1rem;
+        padding: 12px 24px;
+      }
+
+      .footer {
+        font-size: 0.8rem;
+        padding: 10px;
+      }
+    }
+
+    .cart-button {
+      background-color: #ff9a9e;
+      padding: 5px 10px;
+      border-radius: 5px;
+      color: white;
+      font-size: 18px;
+      transition: background 0.3s ease, transform 0.3s ease;
+    }
+
+    .cart-button:hover {
+      background-color: #ff7a8e;
+      transform: scale(1.1);
     }
   </style>
 </head>
@@ -93,25 +153,26 @@
       <ul>
         <li><a href="index.html">Початкова сторінка</a></li>
         <li><a href="menu.html">Меню</a></li>
-        <li><a href="food.html">Їжа</a></li>
-        <li><a href="drink.html">Напої</a></li>
-        <li><a href="sweets.html">Солодощі</a></li>
-        <li><a href="cart.html">Кошик</a></li>
+        <li><a href="tests/index.html">Тести</a></li>
+        <li><a href="cart.html" class="cart-button">🛒</a></li>
+
       </ul>
     </nav>
   </header>
 
-  <div class="main-content">
-    <h1>Меню шкільної їдальні</h1>
+  <div class="content-container">
+    <h2>Меню шкільної їдальні</h2>
     <p>Оберіть категорію товарів:</p>
-    <a href="food.html" class="category-button">Їжа</a>
-    <a href="drink.html" class="category-button">Напої</a>
-    <a href="sweets.html" class="category-button">Солодощі</a>
+    <div class="category-buttons">
+      <a href="./food.html" class="category-button">Їжа</a>
+      <a href="./drink.html" class="category-button">Напої</a>
+    </div>
   </div>
 
-  <footer>
-    <p>&copy; 2024 Шкільна їдальня. Всі права захищені.</p>
-  </footer>
+  <!-- Футер -->
+  <div class="footer">
+    © 2024 Шкільна їдальня. Всі права захищені.
+  </div>
 
 </body>
 </html>
