--- a/pages/register.html
+++ b/pages/register.html
@@ -1,153 +1,214 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Реєстрація</title>
-  <style>
-    /* Загальні стилі для всіх форм */
-body {
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
-    color: white;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    box-sizing: border-box;
-}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Інноваційна Шкільна їдальня</title>
+    <style>
+      body {
+        background: linear-gradient(135deg, #1d2b64, #f8cdda);
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        color: white;
+        flex-direction: column;
+        text-align: center;
+      }
 
-/* Контейнери для форм */
-section {
-    background: rgba(0, 0, 0, 0.7);
-    padding: 30px;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
+      .welcome-text {
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
 
-h1 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #fff;
-}
+      .login-container {
+        width: 100%;
+        max-width: 400px;
+        margin: 50px auto;
+        padding: 20px;
+        background: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+      }
 
-/* Стилі для групи полів вводу */
-.input-group {
-    margin-bottom: 15px;
-    text-align: left;
-}
+      h1 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: #333;
+      }
 
-label {
-    display: block;
-    font-size: 1rem;
-    margin-bottom: 5px;
-    color: #fff;
-}
+      .input-group {
+        margin-bottom: 15px;
+      }
 
-input {
-    width: 100%;
-    padding: 10px;
-    font-size: 1rem;
-    border: none;
-    border-radius: 5px;
-    background: #fff;
-    color: #333;
-}
+      .input-group label {
+        font-size: 14px;
+        color: #555;
+        display: block;
+      }
 
-input:focus {
-    outline: none;
-    box-shadow: 0 0 5px rgba(39, 174, 96, 1);
-}
+      .input-group input {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+        font-size: 16px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
 
-/* Кнопки */
-button {
-    width: 100%;
-    padding: 12px;
-    font-size: 1.1rem;
-    background: linear-gradient(135deg, #f1c40f, #e67e22);
-    color: #000;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
+      .login-btn {
+        width: 100%;
+        padding: 12px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+      }
 
-button:hover {
-    background: linear-gradient(135deg, #e67e22, #f1c40f);
-}
+      .login-btn:hover {
+        background-color: #0056b3;
+      }
 
-/* Ссилки */
-a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 0.9rem;
-    margin-top: 10px;
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
+      .login-links {
+        margin-top: 20px;
+        text-align: center;
+      }
 
-a:hover {
-    color: #ff9a9e;
-}
+      .login-links a {
+        color: #007bff;
+        font-size: 16px;
+        text-decoration: none;
+        margin: 0 10px;
+      }
 
-/* Особливості для конкретних сторінок */
+      .login-links a:hover {
+        text-decoration: underline;
+      }
 
-/* Сторінка реєстрації */
-.register-container {
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
-    padding: 30px;
-}
+      #canteen-button {
+        display: block;
+        width: 300px;
+        height: 80px;
+        background: linear-gradient(135deg, #00b4db, #0083b0);
+        border: none;
+        border-radius: 40px;
+        color: green;
+        font-size: 24px;
+        cursor: pointer;
+        transition: 0.3s;
+        text-align: center;
+        line-height: 80px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        margin-top: 20px;
+      }
 
-/* Сторінка входу */
-.login-container {
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
-    padding: 30px;
-}
+      #canteen-button:hover {
+        background: linear-gradient(135deg, #0083b0, #00b4db);
+        transform: scale(1.05);
+      }
 
-.login-links {
-    margin-top: 20px;
-}
+      @media (max-width: 600px) {
+        .login-container {
+          width: 90%;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="welcome-text">
+      <p>Добрий день, шановний користувачу!</p>
+      <p>Вітаємо на сайті Інноваційної Шкільної їдальні!</p>
+      <p>
+        Зареєструйтесь або увійдіть у наявний акаунт, щоб зайти на головну
+        сторінку сайту.
+      </p>
+    </div>
 
-.register-now, .forget-password {
-    display: block;
-    margin: 10px 0;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
+    <section class="login-container" id="auth-container">
+      <h1>Реєстрація/Вхід до шкільної їдальні</h1>
 
-/* Сторінка відновлення паролю */
-.forgot-password-container {
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 10px;
-    padding: 30px;
-}
-</style>
-</head>
-<body>
-    <section class="register-container">
-        <h1>Реєстрація нового користувача</h1>
-        <form action="register-action.php" method="post">
-            <div class="input-group">
-                <label for="email">Електронна пошта</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Пароль</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="register-btn">Зареєструватися</button>
-        </form>
-        <div class="login-link">
-            <a href="login.html">Маєте акаунт? Увійти</a>
+      <form id="auth-form">
+        <div class="input-group">
+          <label for="email">Електронна пошта</label>
+          <input type="email" id="email" name="email" required />
         </div>
+        <div class="input-group">
+          <label for="password">Пароль</label>
+          <input type="password" id="password" name="password" required />
+        </div>
+        <button type="submit" class="login-btn" id="submit-btn">
+          Зареєструватися
+        </button>
+      </form>
+
+      <div class="login-links">
+        <a href="javascript:void(0);" id="toggle-auth">Маєте акаунт? Увійти</a>
+      </div>
     </section>
-</body>
+
+    <script>
+      const authForm = document.getElementById("auth-form");
+      const submitBtn = document.getElementById("submit-btn");
+      const authContainer = document.getElementById("auth-container");
+      const toggleAuth = document.getElementById("toggle-auth");
+
+      toggleAuth.addEventListener("click", () => {
+        if (submitBtn.textContent === "Зареєструватися") {
+          submitBtn.textContent = "Увійти";
+          toggleAuth.textContent = "Не маєте акаунту? Зареєструватися";
+        } else {
+          submitBtn.textContent = "Зареєструватися";
+          toggleAuth.textContent = "Маєте акаунт? Увійти";
+        }
+      });
+
+      authForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        if (submitBtn.textContent === "Зареєструватися") {
+          if (email && password) {
+            localStorage.setItem("email", email);
+            localStorage.setItem("password", password);
+
+            alert("Вітаємо! Ви успішно зареєстровані!");
+
+            // Після реєстрації, показуємо повідомлення
+            // Після успішної реєстрації, ми замінюємо HTML в контейнері
+            authContainer.innerHTML = `
+<h2 style="color: black;">Реєстрація успішна!</h2>
+<p style="color: black;">Вітаємо в шкільній їдальні. Тепер ви можете перейти на головну сторінку!</p>
+<button id="go-home-btn" class="login-btn">Перейти на головну сторінку</button>
+`;
+
+            // Логіка для кнопки, яка здійснює перехід на головну сторінку
+            document
+              .getElementById("go-home-btn")
+              .addEventListener("click", () => {
+                window.location.href = "pages/index.html"; // Перехід на головну сторінку
+              });
+          } else {
+            alert("Будь ласка, заповніть всі поля.");
+          }
+        } else {
+          const storedEmail = localStorage.getItem("email");
+          const storedPassword = localStorage.getItem("password");
+
+          if (email === storedEmail && password === storedPassword) {
+            alert("Вхід успішний!");
+            window.location.href = "../pages/index.html"; // Перехід до їдальні
+          } else {
+            alert("Невірний логін або пароль!");
+          }
+        }
+      });
+    </script>
+  </body>
 </html>
