--- a/tests/index.html
+++ b/tests/index.html
@@ -8,26 +8,25 @@
       /* Загальні стилі */
       body {
         font-family: "Orbitron", sans-serif;
-        background: linear-gradient(135deg, #00c6ff 0%, #0072ff 100%);
+        background: linear-gradient(45deg, #6a11cb, #2575fc, #2ecc71);
+        color: white;
         margin: 0;
         padding: 0;
-        color: white;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
         flex-direction: column;
+        min-height: 100vh;
+        box-sizing: border-box;
       }
 
-      /* Стилі для хедера */
       header {
-        width: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        padding: 20px 0;
-        position: fixed;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 15px 0;
+        text-align: center;
+        position: sticky;
         top: 0;
         z-index: 100;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        width: 100%;
       }
 
       nav ul {
@@ -35,7 +34,8 @@
         padding: 0;
         margin: 0;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
+        align-items: center;
       }
 
       nav ul li {
@@ -47,12 +47,13 @@
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s ease, transform 0.3s ease;
+        font-size: 18px;
       }
 
       nav ul li a:hover {
-        color: #00ffe7;
-        text-shadow: 0 0 12px #00ffe7;
+        color: #ff9a9e;
         transform: scale(1.1);
+        text-shadow: 0 0 8px #ff9a9e;
       }
 
       /* Стилі для основного контейнера */
@@ -63,23 +64,22 @@
         flex-direction: column;
         width: 100%;
         height: 100vh;
-        padding-top: 80px; /* Відступ для хедера */
+        padding-top: 80px;
       }
 
       /* Стилі для тесту */
       #test-container {
         display: none;
-        width: 80%; /* Збільшена ширина */
-        max-width: 800px; /* Максимальна ширина */
+        width: 80%;
+        max-width: 800px;
         background: rgba(0, 0, 0, 0.4);
         padding: 40px;
         border-radius: 15px;
         box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
-        animation: fadeInUp 1s ease-out;
         margin-bottom: 30px;
         text-align: center;
-        height: 600px; /* Збільшена висота */
-        overflow-y: auto; /* Прокрутка по вертикалі */
+        height: 600px;
+        overflow-y: auto;
       }
 
       /* Стилі для питань */
@@ -140,7 +140,6 @@
         box-shadow: 0px 15px 40px rgba(0, 0, 0, 0.6);
         width: 350px;
         margin-top: 30px;
-        animation: fadeInUp 1s ease-out;
       }
 
       #result-container p {
@@ -179,11 +178,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="./index.html">Головна</a></li>
-          <li><a href=".././menu.html">Меню</a></li>
-          <li><a href="../tests/index.html">Тести</a></li>
-          <li><a href="../games.html">Ігри</a></li>
-          <li><a href="./contacts.html">Контакти</a></li>
+          <li><a href="../index.html">Початкова сторінка</a></li>
+          <li><a href="../tests/wallet.html">Ваш гаманець</a></li>
+          <li><a href="../menu.html">Меню</a></li>
+          <li><a href="tests/index.html">Тести</a></li>
+          <li><a href="../cart.html">🛒</a></li>
         </ul>
       </nav>
     </header>
@@ -196,18 +195,15 @@
       <div id="test-container">
         <form id="test-form">
           <div id="questions-container"></div>
-          <button id="submit-button" type="button" onclick="submitTest()">
-            Завершити тест
-          </button>
+          <button id="submit-button" type="button" onclick="submitTest()">Завершити тест</button>
         </form>
       </div>
 
       <div id="result-container">
         <p id="score"></p>
+        <p id="stars"></p>
         <p id="discount"></p>
-        <button id="next-button" onclick="location.reload()">
-          Почати знову
-        </button>
+        <button id="next-button" onclick="location.reload()">Почати знову</button>
       </div>
     </div>
 
@@ -218,22 +214,21 @@
       // Завантаження питань з JSON
       async function loadTest() {
         try {
-          const response = await fetch("questions.json");
+          const response = await fetch("questions.json"); // Переконайтеся, що шлях правильний
           if (!response.ok) {
             throw new Error("Не вдалося завантажити питання");
           }
           const data = await response.json();
           questions = data.questions;
 
-          const questionsContainer = document.getElementById(
-            "questions-container"
-          );
+          const questionsContainer = document.getElementById("questions-container");
           questionsContainer.innerHTML = "";
 
           if (questions.length === 0) {
             console.log("Немає питань у JSON!");
           }
 
+          // Створення елементів для кожного питання
           questions.forEach((question, index) => {
             const questionElement = document.createElement("div");
             questionElement.classList.add("question");
@@ -244,56 +239,57 @@
 
             question.відповіді.forEach((answer, i) => {
               const answerElement = document.createElement("label");
-              answerElement.innerHTML = ` 
-                            <input type="radio" name="question${index}" value="${i}">
-                            ${answer}
-                        `;
+              answerElement.innerHTML = `<input type="radio" name="question${index}" value="${i}"> ${answer}`;
               questionElement.appendChild(answerElement);
             });
 
             questionsContainer.appendChild(questionElement);
           });
+
+          // Показати кнопку для завершення тесту
+          document.getElementById("next-button").style.display = "none";
+          document.getElementById("test-container").style.display = "block";
         } catch (error) {
-          console.error("Помилка при завантаженні питань:", error);
+          alert("Помилка при завантаженні тесту: " + error.message);
         }
       }
 
+      // Функція початку тесту
       function startTest() {
-        document.querySelector("#start-container").style.display = "none";
-        document.getElementById("test-container").style.display = "block";
+        document.getElementById("start-container").style.display = "none";
         loadTest();
       }
 
+      // Функція для подачі тесту
       function submitTest() {
         correctAnswers = 0;
         const form = document.getElementById("test-form");
-        const formData = new FormData(form);
 
-        formData.forEach((value, key) => {
-          const questionIndex = parseInt(key.replace("question", ""));
-          const correctAnswerIndex =
-            questions[questionIndex].правильна_відповідь;
+        questions.forEach((question, index) => {
+          const selectedAnswer = form.querySelector(`input[name="question${index}"]:checked`);
 
-          if (parseInt(value) === correctAnswerIndex) {
-            correctAnswers++;
+          if (selectedAnswer) {
+            const answerIndex = parseInt(selectedAnswer.value);
+            if (answerIndex === question.correctAnswer) {
+              correctAnswers++;
+            }
           }
         });
 
-        // Вирахувати знижку
-        const discount = Math.min(
-          Math.floor((correctAnswers / questions.length) * 100),
-          10
-        );
+        displayResults();
+      }
 
-        // Показати результат
+      // Виведення результатів
+      function displayResults() {
         document.getElementById("test-container").style.display = "none";
         document.getElementById("result-container").style.display = "block";
-        document.getElementById(
-          "score"
-        ).textContent = `Ваш результат: ${correctAnswers} з ${questions.length}`;
-        document.getElementById(
-          "discount"
-        ).textContent = `Ваша знижка: ${discount}%`;
+
+        const score = correctAnswers;
+        const stars = score === 12 ? 3 : score >= 9 ? 2 : 1; // За кількість правильних відповідей
+
+        document.getElementById("score").textContent = `Результат: ${score} з 12`;
+        document.getElementById("stars").textContent = `Зірочки: ${stars}`;
+        document.getElementById("discount").textContent = `Знижка: ${stars * 5}%`; // Знижка залежить від кількості зірочок
       }
     </script>
   </body>
